--- a/WinCallingConventionDetection/WinCallingConventionDetection.vcxproj
+++ b/WinCallingConventionDetection/WinCallingConventionDetection.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="hde32\hde32.h" />
     <ClInclude Include="hde32\table32.h" />
     <ClInclude Include="PEParser32.hpp" />
+    <ClInclude Include="UnmanagedPointer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
